--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 
 .welcome{
   width: 100%;
-  height: 87vh;
+  height: 90vh;
   align:center;
-  background:#FFF0F5;
+  background:#24243b;
 }
 
 video{
